# find-simdoc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
all-pairs-hamming/: Cargo.toml  README.md
all-pairs-hamming/src/: bitset64.rs  chunked_join.rs  errors.rs  lib.rs  multi_sort.rs  simple_join.rs  sketch.rs
all-pairs-hamming/timeperf/: Cargo.toml
all-pairs-hamming/timeperf/src/: main.rs
data/: sample.txt
find-simdoc/: Cargo.toml  README.md
find-simdoc-cli/: Cargo.toml
find-simdoc-cli/src/: cosine.rs  dump.rs  jaccard.rs  minhash_acc.rs
find-simdoc/examples/: find_cosine.rs  find_jaccard.rs
find-simdoc/src/: cosine.rs  errors.rs  exact.rs  feature.rs  jaccard.rs  lib.rs  lsh.rs  main.rs  shingling.rs  tfidf.rs
find-simdoc/src/lsh/: minhash.rs  simhash.rs
hamjoin/: Cargo.toml
hamjoin/src/: bitset64.rs  chunked_join.rs  lib.rs  sketch.rs
hamming-join/: Cargo.toml
hamming-join/bench/: Cargo.toml
hamming-join/bench/benches/: bench_join.rs
hamming-join/src/: bitset64.rs  chunked_join.rs  multi_sort.rs  simple_join.rs  simple_joiner.rs  sketch.rs
hamming-join/timeperf/: Cargo.toml
hamming-join/timeperf/src/: main.rs
lsh/: Cargo.toml
lsh/src/: lib.rs  minhash.rs  simhash.rs
scripts/: load_nltk_dataset.py
