[package]
name = "all-pairs-hamming"
version = "0.1.0"
edition = "2021"
authors = ["Shunsuke Kanda <shnsk.knd@gmail.com>"]
description = "All-pair similarity search on binary sketches in the Hamming space."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/legalforce-research/find-simdoc"
repository = "https://github.com/legalforce-research/find-simdoc"
readme = "README.md"
keywords = ["search", "similarity", "all-pairs", "lsh"]
categories = ["text-processing", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15" # MIT or Apache-2.0
anyhow = "=1.0.62" # MIT or Apache-2.0
hashbrown = "0.12.3" # MIT or Apache-2.0