[package]
name = "find-simdoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hamming-join = { path = "../hamming-join" }  # MIT or Apache-2.0
lsh = { path = "../lsh" }  # MIT or Apache-2.0
clap = { version = "3.1", features = ["derive"] }  # MIT or Apache-2.0
fasthash = "0.4.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"

[[bin]]
name = "jaccard"
path = "src/bin/jaccard.rs"

[[bin]]
name = "cosine"
path = "src/bin/cosine.rs"

[[bin]]
name = "dump"
path = "src/bin/dump.rs"
